fix: visibility of the modal before showModal()

--- a/scss/layout/_won-game.scss
+++ b/scss/layout/_won-game.scss
@@ -1,7 +1,10 @@
 .won-game {
   width: 100%;
 
-  display: flex;
+  display: none;
+  &[open] {
+    display: flex;
+  }
   flex-direction: column;
   align-items: center;
 
